--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,11 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid">
+      <%= render "common/navbar" %>
+      <%= render "common/flashes" %>
       <%= yield %>
-    </div>    
+    </div>
+    <%= render "common/footer" %>
   </body>
 </html>
