--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,25 +1,21 @@
-<%= form_for [:admin, @product] do |f| %>
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, :class => "form-control" %>
+<%= simple_form_for [:admin, @product] do |f| %>
+  <div class="group">
+    <%= f.input :title %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :description %>
-    <%= f.text_area :description, :class => "form-control" %>
+  <div class="group">
+    <%= f.input :description %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :quantity %>
-    <%= f.text_field :quantity, :class => "form-control" %>
+  <div class="group">
+    <%= f.input :quantity %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :price %>
-    <%= f.text_field :price, :class => "form-control" %>
+  <div class="group">
+    <%= f.input :price %>
   </div>
 
-  <div class="form-group">
+  <div class="group">
     <%= f.submit :class => "btn btn-primary" %>
   </div>
 <% end %>
