--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -15,6 +15,15 @@
     <%= f.input :price %>
   </div>
 
+  <% if @product.image.present? %>
+    <span>目前商品图</span>
+    <%= image_tag(@product.image.thumb.url) %>
+  <% end %>
+
+  <div class="group">
+    <%= f.input :image, as: :file %>
+  </div>
+
   <div class="group">
     <%= f.submit :class => "btn btn-primary" %>
   </div>
