--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,34 +1,37 @@
-<h1>Product List</h1>
+<h2>Product List</h2>
 
-<div class="text-right">
-  <%= link_to "Add new product", new_admin_product_path, :class => "btn btn-primary" %>
+<div class="pull-right">
+  <%= link_to "新增产品", new_admin_product_path, :class => "btn btn-primary btn-sm" %>
 </div>
 
-<table class="table">
+<table class="table table-bordered">
   <thead>
     <tr>
       <th>#</th>
-      <th>品名</th>
-      <th>叙述</th>
-      <th>库存</th>
-      <th>价格</th>
-      <th>选项</th>
-      <th>创建日期</th>
+      <th width="220">Product Pic</th>
+      <th>Name</th>
+      <th>Price</th>
+      <th width="100">Options</th>
     </tr>
   </thead>
   <tbody>
     <% @products.each do |product| %>
       <tr>
         <td><%= product.id %></td>
-        <td><%= link_to product.title, admin_product_path(product) %></td>
-        <td><%= product.description %></td>
-        <td><%= product.quantity %></td>
+        <td>
+          <%= link_to product_path(product) do %>
+            <% if product.image.present? %>
+              <%= image_tag(product.image.thumb.url, class: "thumbnail") %>
+            <% else %>
+              <%= image_tag("http://placehold.it/200x200&text=No Pic" , class: "thumbnail") %>
+            <% end %>
+          <% end %>
+        </td>
+        <td><%= product.title %></td>
         <td><%= product.price %></td>
         <td>
-          <%= link_to "Edit", edit_admin_product_path(product) %> |
-          <%= link_to "Delete", admin_product_path(product), method: :delete, data: {:confirm => "Are you sure?"} %>
+          <%= link_to "Edit", edit_admin_product_path(product) %>
         </td>
-        <td><%= product.created_at.to_s(:long) %></td>
       </tr>
     <% end %>
   </tbody>
